[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Enemies/spider.png" type="Texture" id=1]
[ext_resource path="res://Enemy.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), null, SubResource( 1 ), null ],
"loop": true,
"name": "Dead",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10.3434, 14.0049 )

[sub_resource type="CircleShape2D" id=5]
radius = 120.539

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 19
collision_mask = 19
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "Idle"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.0488662, 0.373113 )
shape = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="."]

[node name="DetectionRadius" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 5 )

[node name="IceTimer" type="Timer" parent="."]
wait_time = 4.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="IceTimer" to="." method="_on_IceTimer_timeout"]
